--- a/Core01/Core01.csproj
+++ b/Core01/Core01.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="LanguageExt.Core" Version="3.4.13" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="Polly" Version="7.2.0" />
