internals visible to beanchmarks

--- a/Core01/Core01.csproj
+++ b/Core01/Core01.csproj
@@ -28,4 +28,10 @@
     <ProjectReference Include="..\FsCsConnection\FsCsConnection.fsproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Benchmarks</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
