--- a/HighPerf/HighPerf.csproj
+++ b/HighPerf/HighPerf.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.1" />
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
