--- a/Core01/Core01.csproj
+++ b/Core01/Core01.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="Confluent.Kafka" Version="2.0.2" />
     <PackageReference Include="FTypesSharingTest" Version="1.0.0" />
     <PackageReference Include="LanguageExt.Core" Version="4.4.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="7.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
