--- a/FsCsConnection/FsCsConnection.fsproj
+++ b/FsCsConnection/FsCsConnection.fsproj
@@ -11,6 +11,14 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Fable.JsonProvider" Version="1.1.1" />
     <PackageReference Include="Fable.SimpleHttp" Version="3.5.0" />
     <PackageReference Include="FSharp.Data" Version="5.0.2" />
