--- a/SpansAndStuff/SpansAndStuff.csproj
+++ b/SpansAndStuff/SpansAndStuff.csproj
@@ -12,5 +12,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Pipelines" Version="8.0.0" />
   </ItemGroup>
 </Project>
