playing aroung with my first nuget package

--- a/SpansAndStuff/SpansAndStuff.csproj
+++ b/SpansAndStuff/SpansAndStuff.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="PerKeySynchronizers" Version="1.0.1" />
     <PackageReference Include="System.IO.Pipelines" Version="8.0.0" />
   </ItemGroup>
 </Project>
