--- a/FsCsConnection/FsCsConnection.fsproj
+++ b/FsCsConnection/FsCsConnection.fsproj
@@ -23,5 +23,6 @@
     <PackageReference Include="Fable.JsonProvider" Version="1.1.1" />
     <PackageReference Include="Fable.SimpleHttp" Version="3.5.0" />
     <PackageReference Include="FSharp.Data" Version="5.0.2" />
+    <PackageReference Include="PerKeySynchronizers" Version="2.1.3" />
   </ItemGroup>
 </Project>
