--- a/FsCsConnection/FsCsConnection.fsproj
+++ b/FsCsConnection/FsCsConnection.fsproj
@@ -9,7 +9,7 @@
     <Compile Include="OptionBuilderTests.fs" />
     <Compile Include="TypeProvidersTests.fs" />
     <Compile Include="Types.fs" />
-    <Compile Include="Library.fs" />
+    <Compile Include="PerKeyTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
