trying out ai for test gen

--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HighPerf\HighPerf.csproj" />
     <ProjectReference Include="..\LeetCode\LeetCode.csproj" />
   </ItemGroup>
 
